# testflow-ai

./: .gitignore  FINAL_REPORT.md  GITHUB_PUSH_FAILED.md  LICENSE  PUSH_STATUS.md  README.md  README_CN.md  VERIFICATION.md  package-lock.json  package.json  push-to-github.sh
analyzer/: package.json
analyzer/src/: index.ts
analyzer/src/__tests__/: analyzer.test.ts
ci/: package.json
ci/src/: githubActions.ts  gitlabCI.ts  index.ts  jenkins.ts  types.ts
ci/src/__tests__/: adapters.test.ts
core/: package.json
core/src/: cli.ts  index.ts
core/src/__tests__/: providers.test.ts
core/src/provider/: AiderProvider.ts  CursorProvider.ts  GeminiProvider.ts  OpenCodeProvider.ts  ProviderManager.ts  types.ts
dashboard/: Cargo.toml
dashboard/src/: main.rs  state.rs  types.rs  ui.rs
test-playwright/: package.json
test-playwright/src/: index.ts
test-playwright/src/__tests__/: integration.test.ts
