[package]
name = "testflow-dashboard"
version = "0.1.0"
edition = "2021"
description = "TestFlow AI TUI Dashboard - Real-time test monitoring and analytics"
authors = ["BohanSu <bohansu@example.com>"]
license = "MIT"
repository = "https://github.com/BohanSu/testflow-ai"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"

[[bin]]
name = "testflow"
path = "src/main.rs"
